objects/OUV_Approval_Route__c.object
<CustomObject>
    <label>OUV Approval Route</label>
    <nameField>
        <label>OUV Approval Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OUV Approval Routes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <formula>Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LL4_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User acting as LL4 for the approval process</description>
        <label>Operations Approver (LL4)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_Market_MD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LL6_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User acting as the LL6 in the Approval Process</description>
        <label>Finance Approver (LL6)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_Market_FD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) Where LL level in market is insufficent user to act in this position in the approval process</description>
        <label>Additional Finance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_DoA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) Where market does not have the required LL level an extra step in the process</description>
        <label>Additional Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_DoA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_VLA_Record_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLA Record Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_VLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Remarketing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for the remarketing stage of approval process</description>
        <label>Remarketing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_Remarketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Finance_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User acting as the Regional Finance Director</description>
        <label>Regional Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_RegionalFD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User acting as the Regional Managing Director for the approval process</description>
        <label>Regional Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Approval_Routes_RegionalMD</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>